# tagumori

./: .gitignore  README.md  cli.py  models.py  pyproject.toml  requirements.txt  setup.py
filetags/: cli.py  grammar.lark  parser2.py  service.py  utils.py
filetags/commands/: context.py  db.py  file.py  query.py  tag.py  tagalong.py
filetags/crud/: __init__.py  base.py  file.py  file_tag.py  query.py  tag.py  tagalong.py
filetags/db/: connect.py  schema.sql
filetags/models/: node.py
filetags/query/: __init__.py  ast.py  executor.py  parser.py  planner.py
filetags/src/: cli.py  cli2.py  dev.py  models.py  new_cli.py  parser.py  utils.py
filetags/src/commands/: tag.py
filetags/src/crud/: __init__.py  file.py  file_tag.py  tagalong.py
filetags/src/db/: connect.py  file.py  file_tag.py  schema.sql  tag.py
filetags/tests/: conftest.py  test_cli.py  test_json.py  test_node.py  test_parser.py  test_tag.py  test_vault.py
tagumori/: cli.py  service.py
tagumori/commands/: context.py  db.py  file.py  query.py  tag.py  tagalong.py
tagumori/crud/: __init__.py  base.py  file.py  file_tag.py  query.py  tag.py
tagumori/db/: init.py  schema.sql
tagumori/query/: README.md  __init__.py  algebra.md  ast.py  executor.py  planner.py
tests/: conftest.py  test_cli.py  test_crud.py  test_migrations.py  test_node.py  test_parser.py  test_service.py  test_utils.py
tests/cli/: conftest.py  test_db.py  test_file.py  test_query.py  test_tag.py  test_tagalong.py  test_tagging.py
tests/query/: test_executor.py  test_parse.py  test_planner.py
(+7 files in other folders)
