[project]
name = "tagumori"
version = "1.0.0"
description = "Arbitrarily nestable tags for files"
authors = [{name = "Simo Hellgrén"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "coverage>=7.5.3",
    "mypy>=1.10.0",
    "lark>=1.1.9",
]

[project.scripts]
tagumori = "tagumori.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
